# Manipond

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exosuit_library/manipond/: exosuit.h  library_placeholder.cpp
exosuit_library/manipond/exosuit/: adaptation.h  error.h  work_in_progress.h
exosuit_library/manipond/exosuit/adaptation/: cxx_standard.h
exosuit_library/manipond/exosuit/error/: dependent_false.h
exosuit_library/manipond/exosuit/work_in_progress/: area_ahead.h
meta_library/manipond/: meta.h
meta_library/manipond/meta/: algorithm.h  constraint.h  trait.h  util.h  wrapper.h
meta_library/manipond/meta/algorithm/: container.h  predicate.h
meta_library/manipond/meta/algorithm/container/: to_variant_array.h
meta_library/manipond/meta/algorithm/predicate/: quantifier.h
meta_library/manipond/meta/constraint/: construct.h  container.h  equivalence.h  view.h
meta_library/manipond/meta/trait/: list.h
meta_library/manipond/meta/wrapper/: element.h  list.h
meta_library/manipond/meta/wrapper/list/: index_element.h  indexed_type.h  indexed_value.h  tag.h  type_list.h  value_list.h
